# qcmath

./: GoMath  Parameters.nb  README.md  electron.sh  integrals.sh  qcmath.nb  qcmath.py
qcaml-tools/: Makefile  dune  dune-project  install_qcaml.sh  qcmath_input.ml  qcmath_integrals.ml
qcaml-tools/_build/: .db  .digest-db  .to-delete-in-source-tree  log
qcaml-tools/_build/.aliases/default/: all-00000000000000000000000000000000  install-00000000000000000000000000000000
qcaml-tools/_build/.aliases/default/qcaml/: all-00000000000000000000000000000000  install-00000000000000000000000000000000
qcaml-tools/_build/default/: .merlin  GoMath.ml  qcmath-qcaml.dune-package  qcmath-qcaml.install
qcaml-tools/_build/default/.dune/: configurator  configurator.v2
qcaml-tools/_build/default/.qcmath_input.eobjs/: GoMath.ml.d  qcmath_input.ml.d  qcmath_integrals.ml.d
qcaml-tools/_build/default/.qcmath_input.eobjs/byte/: goMath.cmi  goMath.cmo  goMath.cmt  qcmath_input.cmi  qcmath_input.cmo  qcmath_input.cmt  qcmath_integrals.cmi  qcmath_integrals.cmo  qcmath_integrals.cmt
qcaml-tools/_build/default/.qcmath_input.eobjs/native/: goMath.cmx  qcmath_input.cmx  qcmath_integrals.cmx
qcaml-tools/_build/default/qcaml/: .gitignore  .gitlab-ci.yml  .gitmodules  META.qcaml  README.md  dune-project  qcaml.dune-package  qcaml.opam
qcaml-tools/_build/default/qcaml/ao/: README.org  basis.org  basis_gaussian.org
qcaml-tools/_build/default/qcaml/common/: README.org  angular_momentum.org  bitstring.org  charge.org  command_line.org  constants.org  coordinate.org  non_negative_float.org  (+7 more)
(+1720 files in other folders)
